--- a/test/webpages/index.html
+++ b/test/webpages/index.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body>
-    <h1>Hoi, welkom! Dit heeft Bram Platier gemaakt.</h1>
+    <h1>Hoi, welkom! Dit heeft Bram Platier gemaakt webserver 3.</h1>
     <div>
         <h2>i <3 you</h2>
         <div style="display: flex; align-items: center;">
